--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "~48.0.10",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-maps": "1.3.2",
+    "react-native-maps-directions": "^1.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
